--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "axios": "^0.20.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-react": "^7.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.1",
     "typescript": "^4.0.2",
     "uuid": "^8.3.0"
@@ -48,7 +52,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.2.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "json-server": "^0.16.1",
     "prettier": "^2.0.5",
-    "json-server": "^0.16.1"
+    "redux-devtools-extension": "^2.13.8"
   }
 }
